# InsightSQL

./: README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: Release.yml
docs/: apply.md  cat.md  count.md  enumerate.md  fill.md  join.md  pinyin.md  rename.md  replace.md  reverse.md  search.md  select.md  skip.md  slice.md  sort.md  split.md  str_slice.md  str_split.md  transpose.md
mock/: asyncRoutes.ts
public/: serverConfig.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/insight/: command.rs  index.rs  mod.rs  tojson.rs  utils.rs
src-tauri/src/insight/cmd/: apply.rs  cat.rs  count.rs  datefmt.rs  enumerate.rs  extsort.rs  fill.rs  idx.rs  insert.rs  join.rs  mod.rs  pinyin.rs  rename.rs  replace.rs  reverse.rs  search.rs  select.rs  separate.rs  skip.rs  slice.rs  sort.rs  split.rs  transpose.rs
src-tauri/src/insight/cmd/convert/: access_to_csv.rs  csv_to_csv.rs  csv_to_excel.rs  dbf_to_csv.rs  excel_to_csv.rs  json_to_csv.rs  jsonl_to_csv.rs  mod.rs  perform.rs
src-tauri/src/insight/cmd/search/: filters.rs  filters_chain.rs  filters_multi.rs  generic.rs  mod.rs  perform.rs
src-tauri/src/insight/cmd/string/: mod.rs  pad.rs  slice.rs  split.rs
src-tauri/src/insight/flow/: mod.rs  operation.rs  process.rs  str.rs  utils.rs
src-tauri/src/insight/io/csv/: config.rs  mod.rs  options.rs  selection.rs
src-tauri/src/insight/io/excel/: excel_reader.rs  mod.rs  xlsx_writer.rs
src-tauri/src/insight/sql/: sqlp.rs
src-tauri/src/lib/: access.rs  apply.rs  behead.rs  cat.rs  cmd.rs  command.rs  convert.rs  count.rs  dbf.rs  detect.rs  enumerate.rs  excel.rs  excel_reader.rs  fill.rs  idx.rs  index.rs  join.rs  mod.rs  modify.rs  offset.rs  pinyin.rs  rename.rs  replace.rs  reverse.rs  search.rs  select.rs  skip.rs  slice.rs  sort.rs  split.rs  sqlp.rs  tojson.rs  traverse.rs  utils.rs  xlsx_writer.rs
src-tauri/src/lib/cmd/: access.rs  apply.rs  cat.rs  convert.rs  count.rs  enumerate.rs  extsort.rs  fill.rs  idx.rs  join.rs  mod.rs  pinyin.rs  rename.rs  replace.rs  reverse.rs  search.rs  select.rs  skip.rs  slice.rs  sort.rs  split.rs  sqlp.rs  to.rs  to_csv.rs  to_excel.rs  transpose.rs  traverse.rs
src-tauri/src/lib/cmd/convert/: access_to_csv.rs  csv_to_csv.rs  csv_to_excel.rs  dbf_to_csv.rs  jsonl_to_csv.rs  mod.rs
src-tauri/src/lib/cmd/string/: mod.rs  pad.rs  slice.rs  split.rs
src-tauri/src/lib/command/: access.rs  apply.rs  cat.rs  convert.rs  count.rs  dbf.rs  enumerate.rs  join.rs  mod.rs  offset.rs  pinyin.rs  replace.rs  reverse.rs  search.rs  skip.rs  slice.rs  split.rs  sqlp.rs
src-tauri/src/lib/flow/: filter.rs  mod.rs  process.rs  str.rs  utils.rs
src-tauri/src/lib/io/: excel_reader.rs  mod.rs  xlsx_writer.rs
src-tauri/src/lib/io/csv/: options.rs  selection.rs
src-tauri/tests/: test_cat.rs  test_count.rs  test_enumerate.rs  test_fill.rs  test_idx.rs  test_insert.rs  test_join.rs  test_pinyin.rs  test_rename.rs  test_replace.rs  test_reverse.rs  test_search.rs  test_select.rs  test_skip.rs  test_slice.rs  test_sort.rs  test_split.rs  test_string.rs  test_transpose.rs
src/assets/md/: sqlp.md
src/components/ReIcon/src/: offlineIcon.ts
src/layout/: frameView.vue  index.vue  types.ts
src/layout/components/: appMain.vue  navbar.vue
src/layout/components/panel/: index.vue
src/layout/components/setting/: index.vue
src/layout/components/sidebar/: horizontal.vue  leftCollapse.vue  logo.vue  mixNav.vue  vertical.vue
src/layout/components/tag/: index.vue
src/layout/hooks/: useDataThemeChange.ts  useLayout.ts  useTag.ts
src/layout/theme/: index.ts
src/router/: index.ts  utils.ts
src/router/modules/: command.ts  error.ts  flow.ts  home.ts  infomation.ts  operation.ts
src/store/: index.ts
src/store/modules/: app.ts  commands.ts  flow.ts  options.ts  sqlHistory.ts  workflow.ts
src/style/: dark.scss  element-plus.scss  index.scss  sidebar.scss  transition.scss
src/utils/: markdown.ts  message.ts  mitt.ts  responsive.ts  sqlFileTree.ts  sqlTabManager.ts  utils.ts  view.ts  workflowManager.ts
src/utils/sql/: aceConfig.ts  sqlFileTree.ts  sqlTabManager.ts
src/views/command/: access.vue  behead.vue  cat.vue  cmd.vue  count.vue  csv.vue  dbf.vue  excel.vue  fill.vue  index.vue  rename.vue  search.vue  select.vue  split.vue
src/views/command/components/: access.vue  addIndex.vue  apply.vue  behead.vue  cat.vue  convert.vue  count.vue  csv.vue  datefmt.vue  dbf.vue  enumerate.vue  excel.vue  fill.vue  idx.vue  insert.vue  join.vue  offset.vue  pinyin.vue  rename.vue  replace.vue  reverse.vue  search.vue  searchChain.vue  select.vue  separate.vue  skip.vue  slice.vue  sort.vue  split.vue  string.vue  toCsv.vue  toExcel.vue  transpose.vue  traverse.vue
src/views/error/: md.vue
src/views/flow/: flow.vue
src/views/flow/components/: filterNode.vue  inputNode.vue  outputNode.vue  renameNode.vue  selectNode.vue  sliceNode.vue  stringNode.vue
src/views/infomation/: md.vue
src/views/login/: index.vue
src/views/login/utils/: rule.ts
src/views/operation/: index.vue
src/views/operation/components/: modify.vue  traverse.vue
src/views/queries/: ace-config.ts  index.vue  sqlp.vue
src/views/queries/components/: sqlp.vue
src/views/welcome/: index.vue
src/views/welcome/components/: sqlp.vue
types/: global.d.ts
