[package]
name = "InsightSQL"
version = "0.5.4"
description = "InsightSQL"
authors = ["tansen"]
license = "MIT"
repository = ""
default-run = "InsightSQL"
edition = "2024"
rust-version = "1.88.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
atoi_simd = "0.16.1"
byteorder = "1.5.0"
calamine = { version = "0.28.0", features = ["dates"] }
cpc = "1.9.3"
chrono = "0.4.41"
csv = "1.3.1"
csv-index = "0.1.6"
dbase = { version = "0.6.0", features = ["encoding_rs"] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
ext-sort = { version = "0.1.5", default-features = false }
indexmap = { version = "2.10.0", features = ["serde"] }
itoa = "1"
lazy_static = "1.5.0"
num_cpus = "1"
odbc-api = "9.0.0"
pinyin = { version = "0.10.0", features = ["plain"] }
polars = { version = "0.49.1", features = [
    "asof_join",
    "cross_join",
    "cse",
    "csv",
    "diagonal_concat",
    "dtype-decimal",
    "lazy",
    "parquet",
    "semi_anti_join",
    "sql",
    "json",
    ] }
rayon = "1.10.0"
regex = "1.11.1"
rust_decimal = "1.37.2"
rustc-hash = "2.1.1"
rust_xlsxwriter = "0.89.0"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simdutf8 = "0.1.5"
sysinfo = "0.35.2"
smallvec = "1.15.1"
tempfile = "3.20.0"
tokio = { version = "1.46.1", features = ["test-util"] }
tauri = { version = "2.6.2", features = [] }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-shell = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-http = "2.5.0"
tauri-plugin-os = "2.3.0"

xl = { git = "https://github.com/tansen87/xl.git", branch = "main" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
