[package]
name = "InsightSQL"
version = "0.5.4"
description = "InsightSQL"
authors = ["tansen"]
license = "MIT"
repository = ""
default-run = "InsightSQL"
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[profile.release]
lto = "fat"
opt-level = 3
strip = true
debug = false
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
atoi_simd = "0.16.1"
byteorder = "1.5.0"
calamine = { version = "0.30.1", features = ["dates"] }
cpc = "1.9.3"
chrono = "0.4.42"
csv = "1.3.1"
csv-index = "0.1.6"
dbase = { version = "0.6.1", features = ["encoding_rs"] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
ext-sort = { version = "0.1.5", default-features = false }
indexmap = { version = "2.10.0", features = ["serde"] }
itoa = "1"
lazy_static = "1.5.0"
log = "0.4"
memmap2 = "0.9"
num_cpus = "1"
odbc-api = "9.0.0"
pinyin = { version = "0.10.0", features = ["plain"] }
polars = { version = "0.51.0", features = [
    "cse",
    "sql",
    "lazy",
    "diagonal_concat",
    "cross_join",
    "semi_anti_join",
    "dtype-decimal",
    "csv",
    "json",
    "parquet",
    ] }
rayon = "1.10.0"
regex = "1.11.2"
rust_decimal = "1.38.0"
rustc-hash = "2.1.1"
rust_xlsxwriter = "0.90.1"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simdutf8 = "0.1.5"
sysinfo = "0.37.0"
smallvec = "1.15.1"
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["test-util"] }
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"

xl = { git = "https://github.com/tansen87/xl.git", branch = "main" }
json-objects-to-csv = { git = "https://github.com/tansen87/json-objects-to-csv", branch = "main"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.0"
