[package]
name = "insight-x"
version = "0.5.4"
description = "insight-x"
authors = ["tansen"]
license = "MIT"
repository = "https://github.com/tansen87/insight-x"
default-run = "insight-x"
edition = "2024"
rust-version = "1.91.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "insight"
path = "src/insight/mod.rs"
crate-type = ["lib", "staticlib", "cdylib"]

[profile.release]
lto = "fat"
opt-level = 3
strip = true
debug = false
codegen-units = 1
panic = "abort"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
atoi_simd = "0.17.0"
byteorder = "1.5.0"
calamine = { version = "0.32.0", features = ["dates"] }
cpc = "1.9.3"
chrono = "0.4.42"
csv = "1.4.0"
csv-index = "0.1.6"
dbase = { version = "0.6.1", features = ["encoding_rs"] }
dynfmt = { version = "0.1.5", default-features = false, features = ["curly"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1.7"
env_logger = "0.11"
ext-sort = { version = "0.1.5", default-features = false }
indexmap = { version = "2.12.0", features = ["serde"] }
itoa = "1"
lazy_static = "1.5.0"
log = "0.4"
memmap2 = "0.9"
num_cpus = "1"
odbc-api = "9.0.0"
pinyin = { version = "0.10.0", features = ["plain"] }
polars = { version = "0.52.0", features = [
    "cse",
    "sql",
    "lazy",
    "diagonal_concat",
    "cross_join",
    "semi_anti_join",
    "dtype-full",
    "csv",
    "json",
    "parquet",
    "rank"
    ] }
rayon = "1.10.0"
regex = "1.11.3"
rust_decimal = "1.39.0"
rustc-hash = "2.1.1"
rust_xlsxwriter = "0.92.2"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simdutf8 = "0.1.5"
sysinfo = "0.37.0"
smallvec = "1.15.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["test-util"] }
tauri = { version = "2.9.4", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-os = "2"

xl = { git = "https://github.com/tansen87/xl.git", branch = "main" }
json-objects-to-csv = { git = "https://github.com/tansen87/json-objects-to-csv", branch = "main"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
